test/classes/casts/owned-to-shared-cast-nonnil-to-nonnil.good
owned-to-shared-cast-nonnil-to-nonnil.chpl:6: error: illegal cast from owned MyClass to shared MyClass
