test/classes/casts/owned-to-shared-cast-nonnil-to-nonnil.chpl
class MyClass {  var x: int;  }

{
  var c = new owned MyClass();

  var result = c:shared MyClass;
  writeln(result, " : ", result.type:string);
}
